--- a/package.json
+++ b/package.json
@@ -22,18 +22,7 @@
     "vite": "^5.2.10",
     "vitepress": "^1.1.3",
     "vitepress-plugin-mermaid": "2.0.8",
-    "vue": "^3.4.24",
-    "@rive-app/canvas": "2.17.3",
-    "@nolebase/markdown-it-bi-directional-links": "2.0.0-rc14",
-    "@nolebase/markdown-it-unlazy-img": "2.0.0-rc14",
-    "@nolebase/ui": "2.0.0-rc14",
-    "@nolebase/vitepress-plugin-enhanced-readabilities": "2.0.0-rc14",
-    "@nolebase/vitepress-plugin-git-changelog": "2.0.0-rc14",
-    "@nolebase/vitepress-plugin-highlight-targeted-heading": "2.0.0-rc14",
-    "@nolebase/vitepress-plugin-inline-link-preview": "2.0.0-rc14",
-    "@nolebase/vitepress-plugin-og-image": "2.0.0-rc14",
-    "@nolebase/vitepress-plugin-page-properties": "2.0.0-rc14",
-    "@nolebase/vitepress-plugin-thumbnail-hash": "2.0.0-rc14"
+    "vue": "^3.4.24"
   },
   "dependencies": {
     "@antv/g2plot": "2.4.31",
