--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -51,7 +51,8 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18
-          registry-url: https://registry.npmjs.org
+#          registry-url: https://registry.npmjs.org
+          registry-url: https://registry.npmmirror.com/
           cache: pnpm
       # 5、安装依赖
       - name: Install dependencies
