--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -43,7 +43,7 @@ jobs:
           git config --global core.ignorecase false  
       # 3、安装 PNPM
       - name: Setup PNPM
-        uses: pnpm/action-setup@v4
+         
         with:
           version: latest
       # 4、安装 Node 环境
@@ -51,7 +51,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18
-          # 光方源
+          # 官方源
           registry-url: https://registry.npmjs.org
           # 淘宝源
 #          registry-url: https://registry.npmmirror.com/
