--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -43,6 +43,7 @@ jobs:
           git config --global core.ignorecase false  
       # 3、安装 PNPM
       - name: Setup PNPM
+        uses: actions/checkout@v4
          
         with:
           version: latest
