--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -43,8 +43,7 @@ jobs:
           git config --global core.ignorecase false  
       # 3、安装 PNPM
       - name: Setup PNPM
-        uses: actions/checkout@v4
-         
+        uses: pnpm/action-setup@v2
         with:
           version: latest
       # 4、安装 Node 环境
